--- a/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb
+++ b/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/98765Faizan/Data-Science-Course-Assignment/blob/master/notebooks/train-yolov8-object-detection-on-custom-dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oe9vkEvFABbN"
       },
       "source": [
@@ -593,10 +603,10 @@
       "metadata": {
         "collapsed": true,
         "id": "D2YkphuiaE7_",
-        "outputId": "4abecd8e-f412-4c2c-ad2a-af67b32679b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4abecd8e-f412-4c2c-ad2a-af67b32679b5"
       },
       "outputs": [
         {
@@ -1586,7 +1596,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
